# kwin

./: CMakeLists.txt  abstract_egl_backend.h  config-kwin.h.cmake  main_wayland.cpp
backends/: CMakeLists.txt
backends/surfaceflinger/: surfaceflinger_backend.cpp  surfaceflinger_backend.h
cmake/modules/: Findlibhybris.cmake
data/: org_kde_kwin.categories
